feat(roles): configure runtime roles and add role management