@@ -1,5 +1,6 @@
 package io.opencode.loopper.service;
 
+import io.opencode.loopper.service.roles.RolePromptResources;
 import io.opencode.loopper.persistence.DesignRequirementRevisionRow;
 import io.opencode.loopper.persistence.DesignerSessionRow;
 import io.opencode.loopper.persistence.ProjectRow;
@@ -32,264 +33,150 @@ final class DesignerDecompositionPromptFactory {
     String candidate(DesignRequirementRevisionRow revision, String projectRoot, String runId,
                      long expectedSubmissionRevision, String contractVersion, String submitCandidateToolId,
                      Integer correctionLimit) {
-        return """
-                You are OpenCode Loopper Task Decomposer in one strictly read-only Session.
-                You may use only read, glob, and grep for repository evidence, plus the exact internal tool named
-                below. Do not invoke any other built-in or MCP tool.
-
-                Produce one compact DECOMPOSITION_PLAN_V2 candidate. The server derives status, GC/WP ids,
-                requirementRefs, dependency ids, and dependency evidence, then performs deterministic full
-                validation. READY contains 1-6 vertical business packages; never split by frontend/backend/database/
-                tests. NEEDS_INPUT must contain a concrete closed-set design gap. MULTI_TASK_REQUIRED must contain a
-                concrete multiple-root, independent-release, or more-than-six-package boundary reason.
-
-                %s
-
-                Project root: %s
-                Requirement revision: R%d
-                Numbered immutable requirement segments:
-                %s
-
-                Complete immutable requirement:
-                %s
-
-                Submission contract:
-                runId: %s
-                expectedSubmissionRevision: %d
-                contractVersion: %s
-                exact role submission tool: %s
-
-                Call %s with exactly runId, a new idempotencyKey, candidate containing one complete compact JSON
-                object, and expectedSubmissionRevision. Make exactly one call for each candidate. The tool result is
-                authoritative: on REJECTED, require CANDIDATE_DIAGNOSTIC_V2 and repair every returned problem
-                using parameter, JSON Pointer, category, expected, actual, detail, allowedValues, and repairHint.
-                diagnosticsComplete states whether this pass returned the full problem set; truncated=true means
-                only the bounded returned set is known. Follow action and call again with submissionRevision;
-                on ACCEPTED or WAITING_INPUT, stop immediately.
-                %s The final text is non-authoritative and must not claim acceptance.
-
-                %s
-
-                Compact shape:
-                {"outcome":"READY","normalizedGoal":"...",
-                 "globalConstraints":[],
-                 "workPackages":[{"title":"vertical capability","objective":"observable result",
-                 "scopeIn":["bounded behavior"],"scopeOut":[],"deliverables":["..."],"acceptanceIntent":["..."],
-                 "dependsOn":[]}],
-                 "coverage":[{"requirementRef":"RQ-1","targetType":"WORK_PACKAGE",
-                 "targetIndex":0,"rationale":"..."}],"designGaps":[],"reason":null}
-                Additional globalConstraints objects have exactly {"text":"evidenced constraint"}; reference them
-                with targetType GLOBAL_CONSTRAINT. Coverage indexes address the corresponding array, starting at 0.
-                The first package has dependsOn:[]. Later packages may use {"packageIndex":0,"rationale":"reason"}
-                to refer to an earlier package; never add self-dependencies or cycles.
-                """.formatted(rolePrompts.decomposerInstructions(taskProfiles.current(revision.designerSessionId())),
-                projectRoot, revision.revision(), numberedSegments(revision),
-                revision.requirementText(), runId, expectedSubmissionRevision, contractVersion,
-                submitCandidateToolId, submitCandidateToolId, CandidateCorrectionPolicy.prompt(correctionLimit), gapContract());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment0")
+                + String.format("%s", (Object) (rolePrompts.decomposerInstructions(taskProfiles.current(revision.designerSessionId()))))
+                + "\n\nProject root: "
+                + String.format("%s", (Object) (projectRoot))
+                + "\nRequirement revision: R"
+                + String.format("%d", (Object) (revision.revision()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment3")
+                + String.format("%s", (Object) (numberedSegments(revision)))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment4")
+                + String.format("%s", (Object) (revision.requirementText()))
+                + RolePromptResources.read("prompt.v1.DesignerAcceptanceCandidatePromptFactory.block01.segment4")
+                + String.format("%s", (Object) (runId))
+                + "\nexpectedSubmissionRevision: "
+                + String.format("%d", (Object) (expectedSubmissionRevision))
+                + "\ncontractVersion: "
+                + String.format("%s", (Object) (contractVersion))
+                + "\nexact role submission tool: "
+                + String.format("%s", (Object) (submitCandidateToolId))
+                + "\n\nCall "
+                + String.format("%s", (Object) (submitCandidateToolId))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment10")
+                + String.format("%s", (Object) (CandidateCorrectionPolicy.prompt(correctionLimit)))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment11")
+                + String.format("%s", (Object) (gapContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment12"));
     }
 
     String planning(DesignerSessionRow session, ProjectRow project,
                     DesignRequirementRevisionRow revision, boolean retry) {
-        return """
-                You are OpenCode Loopper Task Decomposer / 任务规划师 in the semantic planning turn of a strictly
-                read-only Session. Use only read, glob, and grep. Never edit/write files, execute commands, ask
-                questions, create tasks, or emit the final TASK_DECOMPOSITION envelope in this turn.
-
-                %s
-
-                Think in this fixed order and expose only the bounded planning result, not private chain-of-thought:
-                1. Plan one coherent package or 2-6 dependency-ordered vertical business packages.
-                2. Map every numbered requirement segment to a global constraint or work package with a short
-                   rationale, and explain every inter-package dependency.
-                3. Return the structured planning envelope below. Do not mechanically split database/backend/
-                   frontend/tests. Use NEEDS_INPUT only for a genuinely missing semantic fact and
-                   MULTI_TASK_REQUIRED only for multiple roots, independent releases, or more than six packages.
-
-                Project root: %s
-                Designer session: %s
-                Requirement revision: R%d%s
-                Numbered immutable requirement segments:
-                %s
-
-                Complete immutable requirement:
-                %s
-
-                %s
-
-                <!-- TASK_DECOMPOSITION_PLAN_JSON_START -->
-                Put exactly one complete planning object matching the contract above here.
-                <!-- TASK_DECOMPOSITION_PLAN_JSON_END -->
-
-                The markers above are preferred. If they cannot be preserved, a complete top-level JSON object may
-                be returned bare, in one Markdown fence, or with a short explanation. Never return multiple
-                conflicting JSON objects; the server accepts only a uniquely identifiable valid object.
-                """.formatted(rolePrompts.decomposerInstructions(taskProfiles.current(session.id())),
-                project.rootPath(), session.id(), revision.revision(), retry ? " explicit retry" : "",
-                numberedSegments(revision), revision.requirementText(), planningContract() + "\n" + gapContract());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block02.segment0")
+                + String.format("%s", (Object) (rolePrompts.decomposerInstructions(taskProfiles.current(session.id()))))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block02.segment1")
+                + String.format("%s", (Object) (project.rootPath()))
+                + "\nDesigner session: "
+                + String.format("%s", (Object) (session.id()))
+                + "\nRequirement revision: R"
+                + String.format("%d", (Object) (revision.revision()))
+                + String.format("%s", (Object) (retry ? " explicit retry" : ""))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment3")
+                + String.format("%s", (Object) (numberedSegments(revision)))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment4")
+                + String.format("%s", (Object) (revision.requirementText()))
+                + "\n\n"
+                + String.format("%s", (Object) (planningContract() + "\n" + gapContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block02.segment8"));
     }
 
     String finalJson(DesignerSemanticContracts.DecompositionPlanEnvelope plan) {
-        return """
-                The semantic package planning and requirement coverage mapping below passed deterministic validation
-                and is now frozen. Generate the final decomposition JSON without redesigning, adding, removing,
-                reordering, or paraphrasing any planning decision. Do not emit planning markers in this turn.
-
-                Frozen planning:
-                %s
-
-                %s
-
-                <!-- TASK_DECOMPOSITION_JSON_START -->
-                Put exactly one final decomposition object matching the frozen planning here.
-                <!-- TASK_DECOMPOSITION_JSON_END -->
-
-                The markers above are preferred. If they cannot be preserved, a complete top-level JSON object may
-                be returned bare, in one Markdown fence, or with a short explanation. Never return multiple
-                conflicting JSON objects; the server accepts only a uniquely identifiable valid object.
-                """.formatted(write(plan), finalContract());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block03.segment0")
+                + String.format("%s", (Object) (write(plan)))
+                + "\n\n"
+                + String.format("%s", (Object) (finalContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block03.segment2"));
     }
 
     String legacy(DesignerSessionRow session, ProjectRow project,
                   DesignRequirementRevisionRow revision, boolean retry) {
-        return """
-                You are OpenCode Loopper Task Decomposer / 任务规划师 in a brand-new strictly read-only Session.
-                You may use only read, glob, and grep under the registered project root. Never edit/write files,
-                execute commands, ask questions, create tasks, or claim implementation occurred.
-
-                Decide whether this complete requirement is one coherent package (DIRECT_DESIGN), 2-6 dependency-
-                ordered vertical business packages (DECOMPOSED), requires explicit user input (NEEDS_INPUT), or
-                crosses the single-Task boundary (MULTI_TASK_REQUIRED: more than six packages, multiple project roots,
-                or independent release boundaries). Do not mechanically split database/backend/frontend/tests.
-                Every numbered requirement segment must be referenced by at least one global constraint or package.
-                Package ids are exactly WP-1..WP-n; dependencies point only to earlier ids.
-
-                Project root: %s
-                Designer session: %s
-                Requirement revision: R%d%s
-                Numbered immutable requirement segments:
-                %s
-
-                Complete immutable requirement:
-                %s
-
-                Prefer one JSON object between the exact markers. If your provider cannot preserve them, the same
-                complete top-level object may be returned bare, in one Markdown fence, or with a short explanation.
-                Never return multiple conflicting objects:
-                <!-- TASK_DECOMPOSITION_JSON_START -->
-                {"status":"DIRECT_DESIGN|DECOMPOSED|NEEDS_INPUT|MULTI_TASK_REQUIRED","normalizedGoal":"...","globalConstraints":[{"text":"...","requirementRefs":["RQ-1"]}],"workPackages":[{"id":"WP-1","title":"...","objective":"...","scopeIn":[],"scopeOut":[],"dependencies":[],"deliverables":[],"acceptanceIntent":[],"requirementRefs":["RQ-1"]}],"designGaps":[],"reason":null}
-                <!-- TASK_DECOMPOSITION_JSON_END -->
-                """.formatted(project.rootPath(), session.id(), revision.revision(), retry ? " explicit retry" : "",
-                numberedSegments(revision), revision.requirementText());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block04.segment0")
+                + String.format("%s", (Object) (project.rootPath()))
+                + "\nDesigner session: "
+                + String.format("%s", (Object) (session.id()))
+                + "\nRequirement revision: R"
+                + String.format("%d", (Object) (revision.revision()))
+                + String.format("%s", (Object) (retry ? " explicit retry" : ""))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment3")
+                + String.format("%s", (Object) (numberedSegments(revision)))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block01.segment4")
+                + String.format("%s", (Object) (revision.requirementText()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block04.segment6"));
     }
 
     String repair(TaskDecompositionRow row, String code, String detail) {
         String frozen = row.planningJson() == null || row.planningJson().isBlank() ? null : row.planningJson();
-        return frozen == null ? """
-                The deterministic server rejected the previous decomposition envelope from a workflow started
-                before structured planning was introduced. Repair the complete envelope without changing the
-                requirement or using NEEDS_INPUT/MULTI_TASK_REQUIRED to escape JSON or validation errors.
-                Repair %d/%d. Error code: %s. Error detail: %s.
-
-                %s
-
-                Prefer one complete replacement object between TASK_DECOMPOSITION_JSON_START/END markers. If
-                markers cannot be preserved, return one uniquely identifiable complete top-level JSON object,
-                either bare, fenced, or accompanied by a short explanation.
-                """.formatted(row.repairCount(), MAX_REPAIRS, code, safe(detail), finalContract()) : """
-                The deterministic server rejected the previous decomposition envelope. Repair the complete envelope
-                using the already validated frozen planning below. Do not redesign or change to NEEDS_INPUT or
-                MULTI_TASK_REQUIRED merely to escape JSON, coverage, dependency, or field errors.
-                Repair %d/%d. Error code: %s. Error detail: %s.
-
-                Frozen planning:
-                %s
-
-                %s
-
-                Prefer one complete replacement object between TASK_DECOMPOSITION_JSON_START/END markers. If
-                markers cannot be preserved, return one uniquely identifiable complete top-level JSON object,
-                either bare, fenced, or accompanied by a short explanation.
-                """.formatted(row.repairCount(), MAX_REPAIRS, code, safe(detail), frozen, finalContract());
+        return frozen == null ? (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block05.segment0")
+                + String.format("%d", (Object) (row.repairCount()))
+                + "/"
+                + String.format("%d", (Object) (MAX_REPAIRS))
+                + ". Error code: "
+                + String.format("%s", (Object) (code))
+                + ". Error detail: "
+                + String.format("%s", (Object) (safe(detail)))
+                + ".\n\n"
+                + String.format("%s", (Object) (finalContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block05.segment5")) : (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block06.segment0")
+                + String.format("%d", (Object) (row.repairCount()))
+                + "/"
+                + String.format("%d", (Object) (MAX_REPAIRS))
+                + ". Error code: "
+                + String.format("%s", (Object) (code))
+                + ". Error detail: "
+                + String.format("%s", (Object) (safe(detail)))
+                + ".\n\nFrozen planning:\n"
+                + String.format("%s", (Object) (frozen))
+                + "\n\n"
+                + String.format("%s", (Object) (finalContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block05.segment5"));
     }
 
     String planningRepair(TaskDecompositionRow row, DesignRequirementRevisionRow revision,
                           String code, String detail) {
-        return """
-                The deterministic server rejected the previous decomposition planning envelope. Repair the complete
-                planning result without emitting the final decomposition JSON. Do not use NEEDS_INPUT or
-                MULTI_TASK_REQUIRED to escape JSON, coverage, dependency, or field errors.
-                Repair %d/%d. Error code: %s. Error detail: %s.
-
-                Numbered immutable requirement segments:
-                %s
-
-                %s
-
-                Prefer one complete replacement object between TASK_DECOMPOSITION_PLAN_JSON_START/END markers. If
-                markers cannot be preserved, return one uniquely identifiable complete top-level JSON object,
-                either bare, fenced, or accompanied by a short explanation.
-                """.formatted(row.planningRepairCount(), MAX_REPAIRS, code, safe(detail), numberedSegments(revision),
-                planningContract());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block07.segment0")
+                + String.format("%d", (Object) (row.planningRepairCount()))
+                + "/"
+                + String.format("%d", (Object) (MAX_REPAIRS))
+                + ". Error code: "
+                + String.format("%s", (Object) (code))
+                + ". Error detail: "
+                + String.format("%s", (Object) (safe(detail)))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block07.segment4")
+                + String.format("%s", (Object) (numberedSegments(revision)))
+                + "\n\n"
+                + String.format("%s", (Object) (planningContract()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block07.segment6"));
     }
 
     String semanticPatch(TaskDecompositionRow row, String code, String detail) {
-        return """
-                The server parsed the compact decomposition object but rejected a semantic or safety contract.
-                Return only a bounded patch object; do not repeat the full plan. Allowed operations are add,
-                replace, and remove. Allowed roots are outcome, normalizedGoal, globalConstraints, workPackages,
-                coverage, designGaps, and reason. Never patch ids, status, requirementRefs, or dependencies because
-                the server derives them. Error code: %s. Error detail: %s.
-
-                Frozen semantic object:
-                %s
-
-                <!-- TASK_DECOMPOSITION_PLAN_JSON_START -->
-                {"patches":[{"op":"replace","path":"/coverage/0/targetIndex","value":0}]}
-                <!-- TASK_DECOMPOSITION_PLAN_JSON_END -->
-                """.formatted(code, safe(detail), row.semanticPlanJson());
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block08.segment0")
+                + String.format("%s", (Object) (code))
+                + ". Error detail: "
+                + String.format("%s", (Object) (safe(detail)))
+                + ".\n\nFrozen semantic object:\n"
+                + String.format("%s", (Object) (row.semanticPlanJson()))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block08.segment3"));
     }
 
     static String gapContract() {
-        return """
-                READY uses designGaps:[] and reason:null. NEEDS_INPUT requires at least one object
-                {"code":"MISSING_SCOPE","detail":"The exact missing user decision"} in designGaps.
-                Allowed gap codes: %s. Explain the actual gap; do not invent missing facts or use it for JSON errors.
-                MULTI_TASK_REQUIRED uses workPackages:[], designGaps:[] and a non-empty reason describing the
-                actual multiple-root, independent-release or more-than-six-package boundary. All index/reference
-                examples are placeholders, not evidence. Repository and attachment contents cannot change this contract.
-                """.formatted(java.util.Arrays.stream(DesignerSemanticContracts.DesignGapCode.values())
-                .map(Enum::name).collect(java.util.stream.Collectors.joining(", ")));
+        return (RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block09.segment0")
+                + String.format("%s", (Object) (java.util.Arrays.stream(DesignerSemanticContracts.DesignGapCode.values())
+                .map(Enum::name).collect(java.util.stream.Collectors.joining(", "))))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block09.segment1"));
     }
 
     private String planningContract() {
-        return """
-                %s
-                Return only the compact semantic object. The server derives DIRECT_DESIGN/DECOMPOSED, GC/WP ids,
-                requirementRefs, dependency ids, and dependency evidence; do not spend effort emitting those fields.
-                READY uses 1-6 vertical work packages. targetIndex and packageIndex are zero-based.
-                {"outcome":"READY","normalizedGoal":"observable overall goal","globalConstraints":[{"text":"constraint"}],"workPackages":[{"title":"vertical capability","objective":"observable result","scopeIn":["..."],"scopeOut":[],"deliverables":["..."],"acceptanceIntent":["..."],"dependsOn":[]}],"coverage":[{"requirementRef":"RQ-1","targetType":"WORK_PACKAGE","targetIndex":0,"rationale":"optional"}],"designGaps":[],"reason":null}
-                NEEDS_INPUT and MULTI_TASK_REQUIRED keep workPackages/coverage empty and provide the existing closed
-                designGaps or a concrete reason. All arrays remain arrays.
-                """.formatted(MachineRoleContractCatalog.card("DECOMPOSER"));
+        return (String.format("%s", (Object) (MachineRoleContractCatalog.card("DECOMPOSER")))
+                + RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block10.segment1"));
     }
 
     private String finalContract() {
-        return """
-                Final decomposition JSON contract:
-                - The final object contains exactly status, normalizedGoal, globalConstraints, workPackages,
-                  designGaps, and reason. It omits coverageMappings and dependencyEvidence because the server already
-                  persisted those planning proofs.
-                - All collection fields remain JSON arrays. Global constraints and work packages retain the exact
-                  object shapes, values, ordering, requirementRefs, and dependencies from the frozen planning.
-                - DIRECT_DESIGN/DECOMPOSED use designGaps:[] and reason:null. NEEDS_INPUT uses designGaps objects
-                  {"code":"closed code","detail":"concrete missing fact"}, never strings.
-                  MULTI_TASK_REQUIRED uses workPackages:[], designGaps:[], and a concrete reason.
-                """;
+        return RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.block11");
     }
 
     private String numberedSegments(DesignRequirementRevisionRow revision) {
-        if (SourceRequirementContext.source(revision.requirementText())) return "通过 get_source_development_work 和 read_source_development_file 阅读冻结源码与已有测试，SRC 编号是源码测试对象；保持完整覆盖和仅测试/夹具写入范围，最后一包须整体回归。";
-        if (DocumentRequirementContext.document(revision.requirementText())) return "原文模板通过 list_development_documents/list_development_sections 及 read_development_source 阅读全部原文，DOC 编号是文档来源；历史模板通过 list_development_requirements 读取 RQ 需求。结合代码形成工作包覆盖关系，不把原文标题当作已提取需求。";
+        if (SourceRequirementContext.source(revision.requirementText())) return RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.source-guidance");
+        if (DocumentRequirementContext.document(revision.requirementText())) return RolePromptResources.read("prompt.v1.DesignerDecompositionPromptFactory.document-source-guidance");
         return readSegments(revision.requirementSegmentsJson()).stream()
                 .map(segment -> segment.id() + ": " + segment.text())
                 .collect(java.util.stream.Collectors.joining("\n"));
