@@ -1,5 +1,6 @@
 package io.opencode.loopper.service;
 
+import io.opencode.loopper.service.roles.RolePromptResources;
 import io.opencode.loopper.domain.WorkflowTemplate;
 import io.opencode.loopper.persistence.DesignRequirementRevisionRow;
 import io.opencode.loopper.persistence.DesignWorkPackageRow;
@@ -35,127 +36,53 @@ final class DesignerPackagePromptFactory {
         WorkPackageRoleService.View packageRole = workPackageRoles.get(workPackage);
         boolean directSoftware = taskProfiles.workflowTemplateIncludingSuperseded(session.id())
                 == WorkflowTemplate.DIRECT_SOFTWARE_DESIGN;
-        String turnContract = directSoftware || !questionRequired ? """
-                COMPLETE-DESIGN CONTRACT: do not call the question tool and do not ask the user anything.
-                Produce one complete replacement Simplified-Chinese Markdown design. Never return a patch. Preserve
-                all still-valid facts and feedback. Use exactly the controlled Markdown sections and tables defined
-                below. %s
-                """.formatted(directSoftware
-                ? "Use 1-6 stages. If this cannot fit safely, state the gap so the server can return LARGE_TASK_MODE_REQUIRED."
-                : "Use 1-3 stages for this already decomposed package. Report a concrete scope gap if it cannot fit; do not request large-task mode again.") : nativeQuestion ? """
-                MANDATORY TURN ORDER: before writing any design Markdown, call the question tool exactly once with
-                1-3 concise design questions. Each question has 2-3 mutually exclusive choices; put the recommended
-                choice first and suffix its label with “(Recommended)”. Wait for the answers in this same model call.
-                Only then produce one complete replacement Simplified-Chinese Markdown design. Never return a patch
-                and never discard prior accepted facts or this round's answers. Use exactly the controlled Markdown
-                sections and tables defined below.
-                """ : """
-                CHAT QUESTION COMPATIBILITY CONTRACT: the current OpenCode runtime does not expose the native
-                question tool. Do not call question and do not produce package design Markdown in this turn.
-                Return only 1-3 concise Simplified-Chinese design questions as ordinary Markdown text. Number every
-                question and list 2-3 mutually exclusive choices with the recommended choice first and marked
-                “（推荐）”. Tell the user they may answer with a choice or their own wording, then end the response.
-                The user will answer directly in Loopper's chat input.
-                """;
+        String turnContract = directSoftware || !questionRequired ? (RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block01.segment0")
+                + String.format("%s", (Object) (directSoftware
+                ? RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.direct-stage-guidance")
+                : RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.package-stage-guidance")))
+                + "\n") : nativeQuestion ? RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block02") : RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block03");
         if (candidateChannel) turnContract = (questionRequired && nativeQuestion
                 ? "Before designing, call question exactly once with 1-3 concise questions and await the answers.\n"
                 : "Do not call question or ask the user anything.\n")
-                + "Produce one complete PACKAGE_DESIGN_V1 replacement through the private tool. Preserve still-valid facts. "
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.candidate-submission-guidance")
                 + (directSoftware ? "Use 1-6 stages." : "Use 1-3 stages.");
-        return """
-                The requirement phase is complete. Follow this current package-design contract; earlier question-only instructions no longer apply. You are OpenCode Loopper Designer / 设计师 for exactly one work package in its persistent strictly
-                read-only conversation. A healthy package Session is reused across human revisions; after transport
-                loss, this prompt reconstructs the conversation from the persisted snapshots and decisions below.
-                You may use read, glob, and grep. Do not edit/write files, execute commands, ask implementation agents,
-                create tasks, emit executable LoopSpec JSON, or redesign other packages.
-
-                %s
-
-                Project root: %s
-                Complete original requirement R%d:
-                %s
-
-                Frozen decomposition plan:
-                %s
-
-                Current package %s (only scope to design):
-                %s
-
-                Frozen prerequisite package contracts and handoff summaries:
-                %s
-
-                Previous complete package design snapshot (preserve all still-valid information):
-                %s
-
-                Persisted decisions for the current discussion round:
-                %s
-
-                %s
-
-                %s
-
-                %s
-
-                When the current Role Pack requires a focused repository-native test, keep it in the same stage as
-                the production behavior it proves. Tests are evidence for business behavior, not a meta acceptance
-                item. In Java work, never create a final production wiring/demo Stage backed only by full-suite or
-                build commands: keep a focused Maven/Gradle TEST in every JAVA_PRODUCTION Stage or merge that wiring
-                into the related tested Stage.
-                """.formatted(MachineRoleContractCatalog.packageDesignerCard(candidateChannel) + "\n"
+        return (RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment0")
+                + String.format("%s", (Object) (MachineRoleContractCatalog.packageDesignerCard(candidateChannel) + "\n"
                         + rolePrompts.packageDesignerInstructions(taskProfiles.current(session.id()),
                         packageRole.rolePackId(), packageRole.executionStrategy(), packageRole.technologies(),
-                        packageRole.testPolicy()), project.rootPath(), revision.revision(), context.original(revision, workPackage),
-                decomposition.planJson(), workPackage.packageId(), context.packageScope(workPackage),
-                context.prerequisites(revision.id(), workPackage), context.previousDesign(workPackage),
-                context.decisions(session, workPackage), repositoryContext(session.taskId() != null), turnContract,
-                candidateChannel ? "MCP OUTPUT: use candidate-local keys in includes/dependencies; titles are display text. "
-                        + "The server renders the accepted design for the user. Do not also generate design tables."
-                        : markdownContract());
+                        packageRole.testPolicy())))
+                + "\n\nProject root: "
+                + String.format("%s", (Object) (project.rootPath()))
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment2")
+                + String.format("%d", (Object) (revision.revision()))
+                + ":\n"
+                + String.format("%s", (Object) (context.original(revision, workPackage)))
+                + "\n\nFrozen decomposition plan:\n"
+                + String.format("%s", (Object) (decomposition.planJson()))
+                + "\n\nCurrent package "
+                + String.format("%s", (Object) (workPackage.packageId()))
+                + " (only scope to design):\n"
+                + String.format("%s", (Object) (context.packageScope(workPackage)))
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment7")
+                + String.format("%s", (Object) (context.prerequisites(revision.id(), workPackage)))
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment8")
+                + String.format("%s", (Object) (context.previousDesign(workPackage)))
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment9")
+                + String.format("%s", (Object) (context.decisions(session, workPackage)))
+                + "\n\n"
+                + String.format("%s", (Object) (repositoryContext(session.taskId() != null)))
+                + "\n\n"
+                + String.format("%s", (Object) (turnContract))
+                + "\n\n"
+                + String.format("%s", (Object) (candidateChannel ? RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.candidate-output-guidance")
+                        : markdownContract()))
+                + RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block04.segment13"));
     }
     static String markdownContract() {
-        return """
-                CONTROLLED MARKDOWN CONTRACT (section names and table columns are exact):
-                ## 目标与范围
-                State the business goal, in-scope behavior, and explicit non-scope in prose.
-                ## 影响与交付
-                | 类型 | 相对路径或符号 | 说明 |
-                ## 验收场景
-                | 场景 | 前置/触发 | 操作 | 可观察结果 | 保持不变 |
-                Write one row per normal, exception, or boundary path. Use EARS semantics: condition/trigger,
-                action, observable result, and invariant. This table is the authoritative acceptance intent.
-                ## 人工评审项
-                | 评审项 | 判断标准 | 仅人工原因 |
-                Include this optional section only for genuinely subjective outcomes.
-                ## 验收约束
-                State repository-native test classes or test targets that must pass independently, forbidden
-                external dependencies, and test-isolation constraints. Do not write shell commands or argv.
-                ## 阶段与依赖
-                | 阶段 | 目标 | 负责路径 | 包含场景/评审/交付 | 前置阶段 |
-                Use 1-6 rows in direct mode or 1-3 rows in package mode. Keep stages vertical and dependency ordered.
-                The responsibility column must list repository-relative paths or path rules owned by this stage;
-                separate multiple paths with `；` or `;`. Every path that the requirement or delivery table says
-                must be created, modified, or moved to must have exactly one provable owning stage. Do not copy all
-                package paths into every stage. The responsibility column declares write ownership; it is separate
-                from acceptance and delivery grouping.
-                The inclusion column must quote the exact titles used above; separate multiple titles with `；` or
-                `;`. A prerequisite must quote the exact title of an earlier stage. Use an empty value or `无` when
-                there is no prerequisite. Do not abbreviate, fuzzily match, or refer to “all/remaining scenarios”.
-                Never emit DS-L references, WP/AC ids, JSON, LoopSpec fields, or executable command arrays.
-
-                """;
+        return RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block05");
     }
 
     static String repositoryContext(boolean rollingExecution) {
-        return rollingExecution ? """
-                The repository is the latest read-only checkpoint snapshot of this rolling Task, including prior
-                implemented packages. Inspect this snapshot rather than assuming the initial repository is current.
-                Proven facts come only from checkpoint/verification evidence. Accepted contracts describe commitments;
-                AI handoff summaries are navigation only. Report any discrepancy without rewriting completed packages.
-                """ : """
-                The repository is the read-only pre-execution design baseline. APPROVED prerequisite contracts
-                describe work scheduled before this package; approval alone is not proof that files already exist.
-                Inspect actual files. An absent deliverable explicitly promised by a prerequisite is not by itself
-                MISSING_SCOPE. Preserve the contract without claiming its implementation or verification has happened.
-                """;
+        return rollingExecution ? RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block06") : RolePromptResources.read("prompt.v1.DesignerPackagePromptFactory.block07");
     }
 }
