@@ -1,5 +1,6 @@
 package io.opencode.loopper.service;
 
+import io.opencode.loopper.service.roles.RolePromptResources;
 import java.util.Arrays;
 import java.util.stream.Collectors;
 
@@ -8,39 +9,21 @@ final class PackageDesignCandidatePromptContract {
     private PackageDesignCandidatePromptContract() { }
 
     static String readyExample() {
-        return """
-                {"contractVersion":"PACKAGE_DESIGN_V1","outcome":"READY",
-                 "requirements":[{"key":"REQ-1","statement":"需求语义"}],
-                 "scenarios":[{"key":"SC-1","title":"场景标题","precondition":"前置或触发",
-                  "action":"操作","observableResult":"可观察结果","invariant":"保持不变","requirementRefs":["REQ-1"]}],
-                 "deliverables":[{"key":"DEL-1","kind":"DELIVERABLE","target":"src/example.txt",
-                  "description":"交付说明","requirementRefs":["REQ-1"]}],
-                 "reviews":[{"key":"REV-1","title":"人工评审标题","criteria":"可判断的主观标准",
-                  "humanOnlyReason":"需要人工判断的具体原因","requirementRefs":["REQ-1"]}],
-                 "stages":[{"key":"STAGE-1","title":"阶段标题","objective":"阶段目标",
-                  "includes":["SC-1","DEL-1","REV-1"],"dependencies":[]}],"gapCodes":[]}
-                """;
+        return RolePromptResources.read("prompt.v1.PackageDesignCandidatePromptContract.block01");
     }
 
     static String instructions() {
-        return """
-                The following is a complete shape example, not repository evidence; replace all example values.
-                %s
-                Every key is a unique candidate-local reference. kind is SCOPE or DELIVERABLE. Every scenario,
-                deliverable and review has requirementRefs; each stage includes their keys and depends only on
-                earlier stage keys. Include the deliverable in its owning stage so the server can prove ownership.
-                Do not rename fields or add properties. Text fields are strings; all collections remain arrays.
-                reviews is [] unless a real subjective outcome needs criteria AND humanOnlyReason; never fabricate
-                a review to match this example. READY has gapCodes:[] and non-empty requirements/scenarios/deliverables/stages.
-                NEEDS_INPUT keeps all root collections, uses only supported gapCodes and requests real missing
-                design semantics; it is not a Markdown fallback or a way to escape a field error.
-                Limits: scenarios <= %d; requirements + scenarios + deliverables + reviews + stages <= %d.
-                Stages <= %d globally; follow the smaller frozen package limit stated above. Keep keys stable when
-                repairing. Change only fields implicated by diagnostics, retain other content, and submit the full object.
-                Allowed gapCodes: %s.
-                """.formatted(readyExample(), io.opencode.loopper.domain.PackageDesignLimits.MAX_SCENARIOS,
-                io.opencode.loopper.domain.PackageDesignLimits.MAX_FACTS,
-                io.opencode.loopper.domain.PackageDesignLimits.MAX_STAGES, Arrays.stream(DesignerSemanticContracts.DesignGapCode.values())
-                .map(Enum::name).collect(Collectors.joining(", ")));
+        return (RolePromptResources.read("prompt.v1.PackageDesignCandidatePromptContract.block02.segment0")
+                + String.format("%s", (Object) (readyExample()))
+                + RolePromptResources.read("prompt.v1.PackageDesignCandidatePromptContract.block02.segment1")
+                + String.format("%d", (Object) (io.opencode.loopper.domain.PackageDesignLimits.MAX_SCENARIOS))
+                + RolePromptResources.read("prompt.v1.PackageDesignCandidatePromptContract.block02.segment2")
+                + String.format("%d", (Object) (io.opencode.loopper.domain.PackageDesignLimits.MAX_FACTS))
+                + ".\nStages <= "
+                + String.format("%d", (Object) (io.opencode.loopper.domain.PackageDesignLimits.MAX_STAGES))
+                + RolePromptResources.read("prompt.v1.PackageDesignCandidatePromptContract.block02.segment4")
+                + String.format("%s", (Object) (Arrays.stream(DesignerSemanticContracts.DesignGapCode.values())
+                .map(Enum::name).collect(Collectors.joining(", "))))
+                + ".\n");
     }
 }
